eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deslfy-api-deployment
  labels:
    app: deslfy-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deslfy-api
  template:
    metadata:
      labels:
        app: deslfy-api
    spec:
      containers:
      - name: deslfy-api
        image: 890813538613.dkr.ecr.eu-central-1.amazonaws.com/deslfy:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
