eks/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deslfy-postgresql-service
  name: deslfy-postgresql-service
spec:
  externalName: deslfy-postgres.cyrdo5bnjjrs.eu-central-1.rds.amazonaws.com
  selector:
    app: deslfy-api
  type: ExternalName
status:
  loadBalancer: {}
