eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deslfy-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "api.deslfy.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: deslfy-api-service
            port:
              number: 80
  - host: "deslfy.com"
    http:
      paths:
      - pathType: Prefix
        path: "/r/"
        backend:
          service:
            name: deslfy-api-service
            port:
              number: 81
  tls:
  - hosts:
    - deslfy.com
    secretName: deslfy-api-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deslfy-grpc-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/grpc-backend: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "grpc.deslfy.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: deslfy-api-service
            port:
              number: 90
  tls:
  - hosts:
    - grpc.deslfy.com
    secretName: deslfy-api-cert
